Stop right alignment on all scoreboards

--- a/webroot/css/cosplay.css
+++ b/webroot/css/cosplay.css
@@ -20,7 +20,7 @@ table.player-list th {
     font-weight: bold;
     color: #FFF;
 }
-table.player-list td {
+table.numbers td {
     text-align: right;
 }
 
